--- a/about.html
+++ b/about.html
@@ -1,12 +1,13 @@
 ---
 layout: page
-title: "关于我"
-header-img: "img/post-bg-rwd.jpg"
+title: '关于我'
+header-img: 'img/post-bg-rwd.jpg'
 ---
 
 <!-- Chinese Version -->
 <div class="zh post-container">
   <ul>
+    <li>Title: 打破知识壁垒</li>
     <li>Email: ricardo.pangj@gmail.com</li>
     <li>GitHub: <a href="https://github.com/RicardoPang">RicardoPang</a></li>
   </ul>
